fix(scrollbar): update styles (#1484)
* fix: scrollbar-update-styles

* fix(scrollbar): update track color for dark mode

* fix(scrollbar): set scrollbar track color to transparent for light and dark modes

* fix(dropdown): update background color variable for dark mode

--- a/packages/core/src/components/dropdown/dropdown-vars.scss
+++ b/packages/core/src/components/dropdown/dropdown-vars.scss
@@ -40,7 +40,7 @@
 }
 
 .tds-mode-dark {
-  --tds-dropdown-bg: var(--tds-grey-868);
+  --tds-dropdown-bg: var(--tds-grey-850);
   --tds-dropdown-border-bottom: var(--tds-grey-350);
   --tds-dropdown-border-bottom-hover: var(--tds-grey-50);
   --tds-dropdown-value-color: var(--tds-grey-50);
